[project]
name = "agent-with-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-opentelemetry-distro==0.10.0",
    "bedrock-agentcore>=0.1.1",
    "bedrock-agentcore-starter-toolkit>=0.1.2",
    "boto3>=1.39.16",
    "strands-agents>=1.2.0",
    "strands-agents-tools>=0.2.2",
    "uv>=0.8.3",
]